Automated Service Runs and Works as intended.